    The setUpdatedRecord with one parameter works as the setter of updatedRecord property.
- [BUG FIX] The data-im="_@condition:..." way with numeric field and the "match" operator didn't expand the condition
  clause with '%term%' value. As far as PostgreSQL goes, the casting to text is automatically applied it.

Ver.11 (July 27, 2023)
- Generic exporting class prepared as DB\Export.php.
  See the Export button on the sample file /samples/Sample_pdf/list_detail_MySQL.html.
- SwiftMailer was removed, Symphony Mailer is introduced to send e-mail.
- The YAML based definition file can work as like PHP's one. The file name of yaml file can set as the same as page file.
  In the script tag to import the framework, the src attribute has to refer the index.php of the repository root.
- Page localizing is available. The $terms variable in params.php or terms key in the option area of a definition file,
  also using data-im-locale attribute for nodes on a page file.
- Introduced the $mediaRootDir variable in params.php file for setting the media root directory. This is prior to the
  media-root-dir setting in option area of definition file.
- Add methods setRecordStart and clearRecordStart on INTERMediator class.
- The FileURL container is introduced. It can store a 'file:///...' url for an uploaded file with absolute path.
- The $defaultGroupName in the params.php file let any user with no group belong to this group.
- INTERMediator.ignoreDataInContext(cName[, flag]) ignores the specified context name.
- On the multiple client synchronization (i.e. using sync-control in any definition), the clean up task has to call
  "INTERMediator_DBAdapter.unregister()" explicitly.
- INTERMediator.moveAnotherURL(url, task) is newly added. This will call "INTERMediator_DBAdapter.unregister()", do the "task"
  and move to the "url" place
- Update dbupdate.sh for MariaDB 11.
- Update recipe.rb and sample_spec.rb etc. for the INTER-Mediator-Server virtual machine and CI.