@@ -22,6 +22,8 @@ Ver.12 (In Development)
     The setUpdatedRecord with one parameter works as the setter of updatedRecord property.
 - [BUG FIX] The data-im="_@condition:..." way with numeric field and the "match" operator didn't expand the condition
   clause with '%term%' value. As far as PostgreSQL goes, the casting to text is automatically applied it.
+- [BUG FIX] The INPUT[type=datetime-local] elements reported someone edit your modified data, but it was new record data
+  after updateing is not adjusted to UTC correctly.
 
 Ver.11 (July 27, 2023)
 - Generic exporting class prepared as DB\Export.php.
